# CMakeTutorial

./: .gitignore  .gitmodules  LICENSE  README.md  index.md
CUDA/: CMakeLists.txt  README.md  cublasMatMul.cu  cudaMatMul.cu  cudaMatMul.h  dev_array.cu  dev_array.h  kernel.cu  kernel.h  main.cc  matrix_mul.cu  particle.cu  particle.h  randomize.h  test.cu  v3.cu  v3.h
CUDA/cmake/: FindcBLAS.cmake  FindcuBLAS.cmake
FindPackage/: CMakeLists.txt  README.md  addtest.cc  curltest.cc  glogtest.cc
FindPackage/ModuleMode/: Makefile  libadd.cc  libadd.h
FindPackage/cmake/: FindADD.cmake
ImportExternalProject/: CMakeLists.txt  README.md  testspdlog.cc
ImportExternalProject/cmake/: FetchContentMakeAvaliable.cmake  spdlog.cmake  spdlog2.cmake
Installation/: CMakeLists.txt  MyMathConfig.cmake.in  README.md  mymath.cc  mymathApp.cc
Installation/include/: mymath.h
Installation/test_folder/: CMakeLists.txt
PackageManage/: CMakeLists.txt  DisplayImage.cpp  README.md
PythonExtention/: CMakeLists.txt  README.md  python_matrix.cc  setup.py  stub.cc  test_matrix.py
test_folder/: hello.cc  hello.h
